<?xml version="1.0"?>
<package format="2">
  <name>rqt_bag_helper</name>
  <version>0.0.0</version>
  <description>The rqt_bag_helper package, a GUI to assist when recording rosbags</description>
  <maintainer email="michal@robots.ox.ac.uk">Michal Staniaszek</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
